Agregado de el textbox para las tareas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <body>
-    <h1>Hola</h1>
+    <h1>Organizador de tareas</h1>
+    <form id="organizador-tareas">
+      <div>
+        <input type="text" id="task-box">
+      </div>
+    </form>
     <script src="./src/index.js"></script>
   </body>
 </html>
