Agregado el boton para agregar tareas a la lista

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <form id="organizador-tareas">
       <div>
         <input type="text" id="task-box">
+        <input type="submit" id="add-task-button" value="Add"></imput>
       </div>
     </form>
     <script src="./src/index.js"></script>
